# tap-firestore

./: .env.sample  .gitignore  README.md  config.sample.json  meltano.yml  pyproject.toml  requirements.txt
tap_firestore/: __init__.py  streams.py  tap.py
