[tool.poetry]
name = "tap-firestore"
version = "0.1.0"
description = "Singer tap for extracting data from Google Cloud Firestore"
authors = ["Blueprint Data"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/blueprint-data/tap-firestore"
repository = "https://github.com/blueprint-data/tap-firestore"
keywords = ["singer", "tap", "firestore", "firebase", "meltano"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
packages = [
    { include = "tap_firestore" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
singer-sdk = "^0.48.0"
google-cloud-firestore = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
responses = "^0.25.0"

[tool.poetry.scripts]
tap-firestore = "tap_firestore.tap:TapFirestore.cli"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
